Fixed script.js issue on line 36

--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
-<!-- HTML -->
+// Iftekhar Zaman
+// JavaScript Number Guessing Game
+
+// HTML
 
 <!DOCTYPE html>
 <html lang="en">
@@ -30,6 +33,6 @@
     </main>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.2.3/js/bootstrap.min.js" integrity="sha512-1/RvZTcCDEUjY/CypiMz+iqqtaoQfAITmNSJY17Myp4Ms5mdxPS5UV7iOfdZoxcGhzFbOm6sntTKJppjvuhg4g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <script src="script.js" />
+    <script src="script.js"></script>
 </body>
 </html>
